kubernetes/prometheus/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: kube-monitoring.kbsg.rwth-aachen.de
    http:
      paths:
      - path: /
        backend:
         serviceName: grafana
         servicePort: 3000
